[gd_scene load_steps=7 format=3 uid="uid://dff8f2wp2ei1s"]

[ext_resource type="Script" path="res://Scripts/Abilities/Laser_Turret_Shot.gd" id="1_j1tlq"]
[ext_resource type="Texture2D" uid="uid://b5ifyba07i6io" path="res://Sprites/Abilities/LaserShot.png" id="2_qyria"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fx37q"]
atlas = ExtResource("2_qyria")
region = Rect2(0, 0, 130, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx61y"]
atlas = ExtResource("2_qyria")
region = Rect2(0, 3, 130, 3)

[sub_resource type="SpriteFrames" id="SpriteFrames_8lw31"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx37q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx61y")
}],
"loop": true,
"name": &"laser",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ovi88"]
size = Vector2(130, 2)

[node name="Laser_Turret_Shot" type="Area2D"]
visible = false
collision_layer = 0
collision_mask = 14
script = ExtResource("1_j1tlq")
original_damage = 1.0
despawn_time = 0.95
has_movement = false
generated_by = 1
add_extra_physics_process = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(63, 0)
sprite_frames = SubResource("SpriteFrames_8lw31")
animation = &"laser"
autoplay = "laser"
frame_progress = 0.647958

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(63, 0)
shape = SubResource("RectangleShape2D_ovi88")

[node name="Damage_Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Damage_Timer" to="." method="_on_damage_timer_timeout"]
